2002-06-10  Darin Adler  <darin@apple.com>

	* WebCoreSupport.subproj/IFTextRenderer.h: Remove the flavor of
	floatWidthForCharacters without the applyRounding boolean.

	* WebCoreSupport.subproj/IFTextRenderer.m:
	(-[IFTextRenderer drawCharacters:length:atPoint:withColor:]): Remove logic about
	characters in the 0x7F-0xA0 range, since it's already handled by the time we get
	around to drawing.
	(-[IFTextRenderer floatWidthForCharacters:length:applyRounding:]): Pass in the
	applyRounding boolean when calling through to slowFloatWidthForCharacters.
	Move logic about characters in the 0x7F-0xA0 range from here into
	[extendCharacterToGlyphMapToInclude:].
	(-[IFTextRenderer widthForCharacters:length:]): Call the version of
	floatWidthForCharacters that takes the applyRounding parameter; this was the only
	client of the flavor that didn't take the parameter.
	(-[IFTextRenderer extendCharacterToGlyphMapToInclude:]): Add the logic about
	characters in the 0x7F-0xA0 range into here.

2002-06-10  Richard Williamson  <rjw@apple.com>

    Tweaks to rounding code.  
    
    Added Cocoa-exact width measurement emulation flag to support IFStringTruncator.
    
    Remove code that was already conditionally excluded calls to support
    non-specified advance drawing (we now depend on tweaked advances).
    
	* Misc.subproj/IFStringTruncator.m:
	(+[IFStringTruncator centerTruncateString:toWidth:withFont:]):
	* WebCoreSupport.subproj/IFTextRenderer.h:
	* WebCoreSupport.subproj/IFTextRenderer.m:
	(-[IFTextRenderer initWithFont:]):
	(-[IFTextRenderer drawCharacters:length:atPoint:withColor:]):
	(-[IFTextRenderer slowFloatWidthForCharacters:length:applyRounding:]):
	(-[IFTextRenderer slowFloatWidthForCharacters:length:]):
	(-[IFTextRenderer floatWidthForCharacters:length:applyRounding:]):
	(-[IFTextRenderer floatWidthForCharacters:length:]):
	(-[IFTextRenderer extendCharacterToGlyphMapToInclude:]):

2002-06-10  Darin Adler  <darin@apple.com>
